--- a/style.css
+++ b/style.css
@@ -25,6 +25,10 @@
         max-height: 25px;
         margin: auto 0px;
     }
+
+    #poofBox, #sipBox, #lacelessBox {
+        max-width: 18%;
+    }
 }
 
 @media screen and (max-width: 1300px) {
@@ -82,6 +86,19 @@
     font-family: textFont;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     background-color: #fff2f7;
+}
+
+.resetProgress {
+    margin-top: 20px;
+}
+
+.resetProgress > button {
+    margin: auto;
+}
+
+#resetConfirm {
+    display: none;
+    background-color: #fcb771;
 }
 
 html {
