Fixed tooth and wings images
Tooth and wings are no longer draggable or highlightable. Teeth is updated immediately on reload and reset.

--- a/style.css
+++ b/style.css
@@ -44,6 +44,11 @@
     border-radius: 10px;
     margin-bottom: 20px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-drag: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
 }
 
 #factoryTitle {
@@ -55,6 +60,11 @@
     width: 20%;
     vertical-align: top;
     margin-top: 30px;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-drag: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
 }
 
 #firstWing {
