--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@
     -webkit-user-drag: none;
     -webkit-user-select: none;
     -ms-user-select: none;
+    cursor: pointer;
 }
 
 #factoryTitle {
@@ -123,4 +124,5 @@ button {
     margin-top: 5px;
     border-radius: 10px;
     padding: 5px 20px;
+    cursor: pointer;
 }
