--- a/style.css
+++ b/style.css
@@ -39,6 +39,47 @@
 
 }
 
+#popup {
+    visibility: hidden;
+    min-width: 180px;
+    margin-left: -90px;
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    border-radius: 2px;
+    padding: 5px 0px;
+    position: fixed;
+    z-index: 1;
+    left: 50%;
+    top: 10px;
+    font-size: 17px;
+}
+
+#popup.show {
+    visibility: visible;
+    -webkit-animation: fadein 0.5s, fadeout 0.5s 2.6s;
+}
+
+@-webkit-keyframes fadein {
+    from {top: 0; opacity: 0;}
+    to {top: 10px; opacity: 1;}
+}
+
+@keyframes fadein {
+    from {top: 0; opacity: 0;}
+    to {top: 10px; opacity: 1;}
+}
+
+@-webkit-keyframes fadeout {
+    from {top: 10px; opacity: 1;}
+    to {top: 0; opacity: 0;}
+}
+
+@keyframes fadeout {
+    from {top: 10px; opacity: 1;}
+    to {top: 0; opacity: 0;}
+}
+
 #clicker {
     width: 40%;
     max-width: 200px;
