--- a/style.css
+++ b/style.css
@@ -204,6 +204,18 @@
     transform: translateY(-2px);
 }
 
+.info {
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 5px;
+    margin-right: 5px;
+}
+
+.info svg {
+    width: 20px;
+    height: 20px;
+}
 
 #cavitiesBox,
 #pliersBox,
@@ -217,6 +229,7 @@
     font-family: textFont;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     background-color: #fff2f7;
+    position: relative;
 }
 
 #databox span {
@@ -254,6 +267,7 @@
 
 #saveString {
     margin: 10px 10px 0px 25px;
+    resize: none;
 }
 
 #saveArea {
