--- a/style.css
+++ b/style.css
@@ -232,6 +232,41 @@
     position: relative;
 }
 
+.card_front, .card_back {
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+}
+
+.card_front {
+    background-color: transparent;
+
+}
+
+.card_back {
+    transform: rotateY(180deg);
+    -webkit-transform: rotateY(180deg);
+    position: absolute;
+    right: 0;
+    left: 0;
+    top: 0;
+    color: black;
+    height: 100%;
+    background-color: #fff2f7;
+    border-radius: 8px;
+}
+
+
+.card {
+    -webkit-transition: transform 0.6s;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+}
+
+.card.flip {
+    transform: rotateY(180deg);
+    -webkit-transform: rotateY(180deg);
+}
+
 #databox span {
     font-size: 1.5em;
 }
